Add reset button

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -59,6 +59,7 @@
                 <button id="stop-run" class="ghost">Stop</button>
                 <button id="resume-run" class="ghost">Resume</button>
                 <button id="kill-run" class="danger">Kill</button>
+                <button id="reset-runner" class="ghost" title="Reset run ID, clear logs">Reset</button>
                 <button id="refresh-state" class="ghost">↻</button>
               </div>
               <p class="muted small" id="runner-pid">PID: –</p>
