--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -14,46 +14,39 @@
     <div id="hub-shell" class="hub-shell hidden">
       <header class="hub-hero">
         <div class="hub-hero-text">
-          <p class="muted small">Supervisor</p>
-          <h1>Codex Autorunner Hub</h1>
-          <p class="muted">Coordinate multiple repos from a single console.</p>
-          <div class="hub-hero-meta">
-            <span id="hub-last-scan" class="pill pill-small pill-idle">Last scan: –</span>
-          </div>
+          <h1>Hub</h1>
+          <span id="hub-last-scan" class="pill pill-small pill-idle">–</span>
         </div>
         <div class="hub-hero-actions">
-          <button id="hub-scan" class="primary">Scan &amp; seed</button>
-          <button id="hub-refresh" class="ghost">Refresh</button>
+          <button id="hub-scan" class="primary sm">Scan</button>
+          <button id="hub-refresh" class="ghost sm">Refresh</button>
         </div>
       </header>
 
       <section class="hub-stats">
         <div class="hub-stat">
-          <p class="muted small">Repos</p>
           <div id="hub-count-total" class="hub-stat-value">–</div>
+          <p class="muted small">repos</p>
         </div>
         <div class="hub-stat">
-          <p class="muted small">Running</p>
           <div id="hub-count-running" class="hub-stat-value">–</div>
+          <p class="muted small">running</p>
         </div>
         <div class="hub-stat">
-          <p class="muted small">Missing</p>
           <div id="hub-count-missing" class="hub-stat-value">–</div>
+          <p class="muted small">missing</p>
         </div>
       </section>
 
       <section class="hub-repo-panel">
         <div class="hub-panel-header">
-          <div>
-            <span class="label">Repos</span>
-            <p class="muted small">Run and resume repos discovered under this hub.</p>
-          </div>
+          <span class="label">Repositories</span>
           <div class="hub-panel-actions">
             <button id="hub-quick-scan" class="ghost sm">Rescan</button>
           </div>
         </div>
         <div id="hub-repo-list" class="hub-repo-list">
-          <div class="muted">Loading…</div>
+          <div class="muted small">Loading…</div>
         </div>
       </section>
     </div>
