--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -9,8 +9,29 @@
     <title>Codex Autorunner</title>
     <script>
       (() => {
-        const segments = (window.location.pathname || "").split("/").filter(Boolean);
-        const base = segments.length ? `/${segments[0]}` : "/";
+        const normalizeBase = (base) => {
+          if (!base || base === "/") return "";
+          let normalized = base.startsWith("/") ? base : `/${base}`;
+          while (normalized.endsWith("/") && normalized.length > 1) {
+            normalized = normalized.slice(0, -1);
+          }
+          return normalized === "/" ? "" : normalized;
+        };
+        const detectBasePrefix = (path) => {
+          const prefixes = ["/repos/", "/hub/", "/api/", "/static/", "/cat/"];
+          let idx = -1;
+          for (const prefix of prefixes) {
+            const found = path.indexOf(prefix);
+            if (found === 0) return "";
+            if (found > 0 && (idx === -1 || found < idx)) idx = found;
+          }
+          if (idx > 0) return normalizeBase(path.slice(0, idx));
+          const parts = path.split("/").filter(Boolean);
+          if (parts.length) return normalizeBase(`/${parts[0]}`);
+          return "";
+        };
+        const basePrefix = detectBasePrefix(window.location.pathname || "/");
+        const base = basePrefix || "/";
         const baseTag = document.createElement("base");
         baseTag.href = base.endsWith("/") ? base : `${base}/`;
         document.head.appendChild(baseTag);
