Implement worktree management and cleanup functionality
- Removed the default mode handling for worktrees in API routes and GitHub service.
- Introduced new API endpoints for creating and cleaning up worktrees.
- Enhanced the manifest to support worktree metadata, including kind, worktree_of, and branch.
- Updated the UI to allow users to create and manage worktrees, including displaying orphan worktrees.
- Refactored discovery logic to handle worktrees and their relationships with base repositories.
- Improved error handling and validation for worktree operations.

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -199,6 +199,10 @@
                   <span id="github-branch" class="github-mono">–</span>
                 </div>
                 <div class="github-row">
+                  <span class="muted">Checkout</span>
+                  <span id="github-checkout" class="github-mono">–</span>
+                </div>
+                <div class="github-row">
                   <span class="muted">Issue</span>
                   <a id="github-issue-link" class="github-link muted">–</a>
                 </div>
