Add repo snapshot generator

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -300,6 +300,33 @@
           </div>
         </section>
 
+        <section id="snapshot" class="panel">
+          <div class="inline-toolbar">
+            <span class="label">Snapshot</span>
+            <span class="muted small" id="snapshot-status"></span>
+            <label class="muted small"
+              >Audience
+              <select id="snapshot-audience">
+                <option value="overview" selected>overview</option>
+                <option value="change-planning">change-planning</option>
+                <option value="onboarding">onboarding</option>
+              </select>
+            </label>
+            <label class="muted small"
+              >Max chars
+              <input id="snapshot-max-chars" type="number" min="1000" step="500" value="12000" />
+            </label>
+            <button id="snapshot-generate" class="primary sm">Generate snapshot</button>
+            <button id="snapshot-update" class="primary sm hidden">Update snapshot (incremental)</button>
+            <button id="snapshot-regenerate" class="ghost sm hidden">Regenerate snapshot (from scratch)</button>
+            <button id="snapshot-copy" class="ghost sm">Copy to clipboard</button>
+            <button id="snapshot-refresh" class="ghost sm">Reload</button>
+          </div>
+          <div class="doc-editor snapshot-editor">
+            <textarea id="snapshot-content" spellcheck="false" placeholder="(snapshot will appear here)"></textarea>
+          </div>
+        </section>
+
         <section id="logs" class="panel">
           <div class="inline-toolbar">
             <label>Run <input id="log-run-id" type="number" min="1" placeholder="latest" /></label>
