Add summary functionality and integrate into Codex Autorunner
- Introduced a new `SUMMARY.md` document to serve as a user-facing report, capturing external actions, unresolved decisions, and final reports from Codex Autorunner sessions.
- Updated various modules including `about_car.py`, `api_routes.py`, and `engine.py` to support reading and writing to the SUMMARY document.
- Enhanced the dashboard UI to include a button for accessing the summary when all TODO items are complete.
- Added tests to ensure the correct integration and functionality of the SUMMARY document within the Codex Autorunner workflow.

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -179,6 +179,7 @@
             <div class="card todo-preview">
               <div class="card-header">
                 <span class="label">TODO</span>
+                <button id="open-summary" class="primary sm hidden" title="Open final report (SUMMARY)">Summary</button>
                 <button id="refresh-preview" class="ghost sm icon-btn" title="Refresh TODO preview">↻</button>
               </div>
               <ul id="todo-preview-list" class="checklist"></ul>
@@ -225,6 +226,7 @@
             <button class="chip" data-doc="progress">PROGRESS</button>
             <button class="chip" data-doc="opinions">OPINIONS</button>
             <button class="chip" data-doc="spec">SPEC</button>
+            <button class="chip" data-doc="summary">SUMMARY</button>
             <button class="chip" data-doc="snapshot">SNAPSHOT</button>
             <span class="muted" id="doc-status"></span>
           </div>
