Modularize routes; harden snapshot/git fallbacks

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -170,8 +170,18 @@
                   <span class="usage-stat-lbl">reason</span>
                 </div>
               </div>
+              <div class="usage-rates-visual">
+                <div class="usage-rate-row">
+                  <span class="usage-rate-label">Primary</span>
+                  <div id="usage-rate-primary" class="usage-rate-bar-container"></div>
+                </div>
+                <div class="usage-rate-row">
+                  <span class="usage-rate-label">Secondary</span>
+                  <div id="usage-rate-secondary" class="usage-rate-bar-container"></div>
+                </div>
+              </div>
               <div class="usage-footer">
-                <span id="usage-rates">–</span>
+                <span id="usage-rates" class="hidden">–</span>
                 <span id="usage-meta">–</span>
               </div>
             </div>
