Improve mobile terminal UX and reliable input

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -376,6 +376,9 @@
             <div class="terminal-overlay" id="terminal-overlay">
               <p class="muted">Press New or Resume to launch Codex TUI</p>
             </div>
+            <button id="terminal-jump-bottom" class="terminal-jump-btn hidden" title="Jump to latest">
+              ↓ Latest
+            </button>
           </div>
           <!-- Mobile control bar - touch-friendly special keys (above text input) -->
           <div id="terminal-mobile-controls" class="terminal-mobile-controls">
