Fix send button on Terminal text input

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -424,14 +424,14 @@
               <button class="tmb-key tmb-primary" data-seq="&#x0d;">Enter</button>
             </div>
             <div class="tmb-row">
+              <button class="tmb-key tmb-ctrl-combo" data-ctrl="c">^C</button>
+              <button class="tmb-key tmb-ctrl-combo" data-ctrl="d">^D</button>
+              <button class="tmb-key tmb-ctrl-combo" data-ctrl="z">^Z</button>
+              <button class="tmb-key tmb-bksp" data-seq="&#x7f;">Bksp</button>
               <button class="tmb-key tmb-arrow" data-seq="&#x1b;[D">←</button>
               <button class="tmb-key tmb-arrow" data-seq="&#x1b;[A">↑</button>
               <button class="tmb-key tmb-arrow" data-seq="&#x1b;[B">↓</button>
               <button class="tmb-key tmb-arrow" data-seq="&#x1b;[C">→</button>
-              <button class="tmb-key" data-seq="&#x7f;">Bksp</button>
-              <button class="tmb-key tmb-ctrl-combo" data-ctrl="c">^C</button>
-              <button class="tmb-key tmb-ctrl-combo" data-ctrl="d">^D</button>
-              <button class="tmb-key tmb-ctrl-combo" data-ctrl="z">^Z</button>
             </div>
           </div>
           <div id="terminal-text-input" class="terminal-text-input hidden" aria-hidden="true">
