Update terminal send button and enter behavior

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -471,7 +471,7 @@
                   class="primary terminal-text-send-icon"
                   type="button"
                   aria-label="Send"
-                >↑</button>
+                >→</button>
               </div>
             </div>
           </div>
